--- a/assets/styles/front.scss
+++ b/assets/styles/front.scss
@@ -6,10 +6,15 @@
 @import "_front/hero";
 
 #container{
+  max-width: 1200px;
   padding: 1.5rem;
+  margin: 0 auto;
 }
 
 .wfull{
+  min-width: 100%;
+}
+.w-full{
   min-width: 100%;
 }
 /*
