--- a/templates/_template-parts/_footer.html.twig
+++ b/templates/_template-parts/_footer.html.twig
@@ -1,11 +1,11 @@
 {% block footer %}
     <footer>
+        <h6><a href="https://pixelservices.be/">Pixelseervices.be</a> by  <a href="https://jphnovitz.be">Novitz Jean-Philippe, développeur web à Liège </a> 2021 &nbsp; ~ &nbsp;</h6>
         <ul>
-            <li><h6>Novitz Jean-Philippe, <a href="https://jphnovitz.be">développeur web à Liège </a> 2021</h6></li>
             <li>
                 <a href="https://github.com/jphNovitz"> <i class="fab fa-github"></i> </a> ~
-                <a href="https://instagram.com/jphnovitz"> <i class="fab fa-instagram"></i> </a> ~
-                <a href="https://facebook.com/jphnovitz"> <i class="fab fa-facebook-square"></i> </a>
+                <a href="https://instagram.com/pixelservices.be"> <i class="fab fa-instagram"></i> </a> ~
+                <a href="https://facebook.com/pixelservices.be"> <i class="fab fa-facebook-square"></i> </a>
             </li>
         </ul>
     </footer>
