--- a/templates/public/index/index.html.twig
+++ b/templates/public/index/index.html.twig
@@ -1,109 +1,30 @@
 {% extends 'public/base.html.twig' %}
 {% block header %} {% endblock %}
 {% block body %}
-    <div id="container" role="main">
+    <div role="main">
         <section class="hero">
-            <h1>Comment mémoriser ma liste de médicaments ?</h1>
+            <h1>Gérez Vos Listes de Médicaments Facilement </h1>
             <article id="pitch">
                 <h2>
-                    Medocs.be te permet d'encoder facilement les cachets que tu dois prendre chaque jour et de partager
-                    cette liste facilement !
+                    Medocs.be vous simplifie la gestion des médicaments. Enregistrez vos prescriptions, partagez-les en
+                    un clic et restez à jour, où que vous soyez. Idéal pour les personnes âgées et les personnes en
+                    situation de handicap.
                 </h2>
-                <ul>
-                    <li>En envoyant un émail à la personne de ton choix.</li>
-                    <li>De créer une 'url publique'.
-                        <br/>Une url anonyme acceptissible à tout le monde.
-                    </li>
-                </ul>
 
-                <h3>Inscris toi en une minute et commence à encoder ta liste de médicaments.</h3>
+                <h3>Avantages de Medocs.be :</h3>
+                <ul>
+                    <li>Rapidité : Inscription en une minute.</li>
+                    <li>Simplicité : Gérez vos médicaments facilement.</li>
+                    <li>Partage Facile : Envoyez par e-mail ou code QR.</li>
+                    <li>Sécurité : URL anonyme pour un partage sécurisé.</li>
+                </ul>
+                <h3>Arrêtez les listes papier. Promis, on ne vous demandera qu'un' email et ton mot de passe</h3>
             </article>
             <div class="cta">
 
-                <a href="{{ path('app_register') }}" class="btn bg-primary text-white main-cta">Inscription</a>
+                <a href="{{ path('app_register') }}" class="btn bg-primary text-white font-black main-cta">Je Gère !</a>
                 <a href="{{ path('app_login') }}" class="btn btn-basic text-primary border-primary">Connexion</a>
             </div>
-
-            <h3>Promis, on ne te demandera que ton adresse email et ton mot de passe</h3>
-        </section>
-        <section class="index">
-
-            <p>Mémoriser une liste de médicament est simple au départ.
-                <br/>Chacun vas réagir différemment. Papy a son cahier ou son bloc note, voire il retient tout avec sa
-                tête (c'est vrai que c'est un bon exercice). Le fiston a son appli Notion ou quelque chose sur Android
-                ou Iphone. Maman ou papa utilisent l'ordinateur du boulot.</p>
-
-            <p>Tout dépends de tes goûts, de tes connaissances et de la taille de la liste.</p>
-
-            <p>Allez ! On sait que si la liste de médocs est longue c'est rébarbatif car personne n'aime faire
-                l'énumération des différents médicaments que l'on doit prendre chaque jour.</p>
-
-            <p>Et si la liste change.... et bien oui si tu est malade les médecins adorent changer le nom ou la molécule
-                de ta potion journalière. Au fait c'est plus deux fois que tu dois le prendre: c'est trois fois.</p>
-
-            <p>Zut je n'ai pas l'ordinateur sur moi, mais où j'ai mis cette feuille.</p>
-
-            <p>Regardez Papy, il avait fait une liste avec sa belle écriture. Bah c'est juste une rature et l'écriture
-                est toujours aussi belle. Encore une changement ? On reviens au médicament d'avant ?</p>
-
-            <p>Alors la liste elle fini dans la corbeille ou elle devient incomplète dans le virtuel. Parce que tout le
-                monde sait qu'un fichier on ne l'efface pas, il prends de la place.</p>
-
-            <h3>
-                Tu dois prendre des médicaments régulièrement et pour pouvoir en communiquer la liste à des proches, à
-                de nouveaux soignants etc.
-            </h3>
-<div class="horizontal-group full-w centered">
-    <div class="horizontal-item p1-5">
-        <div class="card wfull p1-5">
-            <h3>Avec medocs.be</h3>
-
-            <h4>Retenir cette liste:</h4>
-            <ul class="yes-list">
-                <li>Modifie ta liste en une minute</li>
-                <li>Les Ajouts, modifications, suppressions sont répercutés </li>
-            </ul>
-            <h4>Comment partager ?</h4>
-
-            <ul class="yes-list">
-                <li>
-                    Fais scanner ton code Qr à un proche, un soignant, qui tu veux.
-                </li>
-                <li>
-                    Un bouton envoyer te permet d'envoyer  ta liste en quelques secondes.
-                </li>
-                <li>
-                    Ton adresse publique et anonymisée permet de montrer ta liste plus largement.
-                </li>
-            </ul>
-
-        </div>
-    </div>
-    <div class="horizontal-item p1-5">
-        <div class="card wfull p1-5">
-            <h3>Sans Medocs.be</h3>
-            <h4>Retenir cette liste:</h4>
-            <ul class="no-list">
-                <li>Tu écris cette liste sur un papier, risque de le perdre</li>
-                <li>Document excel (peut-être excel n’est pas ton truc)</li>
-            </ul>
-
-            <h4>Comment Partager cette liste ?</h4>
-            <ul class="no-list">
-                <li>Si dois faire des photocopies</li>
-                <li>tu dois faire un email</li>
-            </ul>
-
-        </div>
-    </div>
-
-</div>
-
-            <p><a href="{{ path('app_register') }}">Inscris en une minute</a> et c'est parti.
-                <br />Tu enregistre les trucs que tu prends , tu met aussi quand et
-                combien, c'est important. Ça y est ta liste de médicament est dans ta poche.</p>
-
-            <p>Et si tu n'aime pas, une minute te suffira pour supprimer ton compte.</p>
         </section>
 
     </div>
