--- a/templates/security/_login.html.twig
+++ b/templates/security/_login.html.twig
@@ -17,7 +17,6 @@
 
 {% block body %}
     <div id="login">
-
         <h1>{% trans %}Login{% endtrans %}</h1>
 
         <form method="post">
@@ -30,7 +29,7 @@
 
             <div class="form-row">
                 <label for="inputEmail"> {% trans %}Email{% endtrans %}</label>
-                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control"
+                <input type="email" value="{{ last_username }}" name="_email" id="inputEmail" class="form-control"
                        autocomplete="email" required autofocus>
             </div>
 
