--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -2,7 +2,7 @@
 
 <p>Il ne reste plus qu'une étape, confirmer votre adresse email.</p>
 
-<p>Il vous suffit de cliquer sur <a href="{{ signedUrl|raw }}">ce lien</a> pour confirmer terminer votre inscription.
+<p>Il vous suffit de cliquer sur <a href="{{ signedUrl|raw }}">ce lien</a> pour terminer votre inscription.
 Attention, ce lien expire dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}. Passé ce délai il faudra recommencer.
 </p>
 
