--- a/templates/components/button/secondary.html.twig
+++ b/templates/components/button/secondary.html.twig
@@ -1,4 +1,3 @@
-<a href="{{ path('member_index') }}"
-   class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-content-primary-light/50 border border-content-primary-light/50 rounded-lg hover:bg-content-primary-light/10 focus:ring-4 focus:ring-content-primary-light/20 dark:text-white dark:border-content-primary-dark/70 dark:hover:bg-content-primary-dark/70 dark:focus:ring-content-primary-dark/80">
+<a class="cursor-pointer inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-content-primary-light/50 border border-content-primary-light/50 rounded-lg hover:bg-content-primary-light/10 focus:ring-4 focus:ring-content-primary-light/20 dark:text-white dark:border-content-primary-dark/70 dark:hover:bg-content-primary-dark/70 dark:focus:ring-content-primary-dark/80">
     {% block content %} {% endblock %}
 </a>
