--- a/templates/components/button/submit.html.twig
+++ b/templates/components/button/submit.html.twig
@@ -1,4 +1,4 @@
 <button type="submit"
-        class="w-full md:w-fit text-content-primary-light bg-content-secondary hover:bg-content-secondary/80 focus:ring-4 focus:outline-none focus:ring-content-secondary/50 font-medium rounded-lg text-sm px-5 py-3 text-center dark:bg-content-secondary/90 dark:hover:bg-content-secondary/70 dark:focus:ring-content-secondary/80">
+        class="w-full md:w-fit text-content-primary-light bg-content-secondary hover:bg-content-secondary/80  focus:outline-none ring-1 ring-content-secondary focus:ring-content-secondary/50 font-medium rounded-lg text-sm px-5 py-3 text-center dark:bg-content-secondary/90 dark:hover:bg-content-secondary/70 dark:focus:ring-content-secondary/80">
    {% block content %} {% endblock %}
 </button>
