--- a/templates/components/title/h2.html.twig
+++ b/templates/components/title/h2.html.twig
@@ -1,3 +1,3 @@
-<h2 {{ attributes.defaults({'class': 'mb-4 text-xl font-bold text-gray-900 dark:text-white'})}}>
+<h2 {{ attributes.defaults({'class': 'text-xl font-bold text-gray-900 dark:text-white'})}}>
     {% block content %} {% endblock %}
 </h2>
