--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,9 @@
     {% endblock %}
 
     {% block javascripts %}
-        {% block importmap %}{{ importmap('app') }}{% endblock %}
+        {% block importmap %}
+            {{ importmap('app') }}
+        {% endblock %}
 
     {% endblock %}
 </head>
