--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,66 +3,90 @@
 {% block title %}Log in!{% endblock %}
 
 
-{% block login_button %}
-    {% if app.user %}
-        {{ app.user.userIdentifier }},
-        <a href="{{ path('app_logout') }}" class="btn btn-basic">
-            {% trans %} Logout {% endtrans %}
-        </a>
-    {% else %}
-        <a href="{{ path('app_register') }}" class="btn btn-basic">
-            {% trans %} Register {% endtrans %}
-        </a>
-    {% endif %}
-{% endblock %}
+{# {% block login_button %} #}
+{#    {% if app.user %} #}
+{#        {{ app.user.userIdentifier }}, #}
+{#        <a href="{{ path('app_logout') }}" class="btn btn-basic"> #}
+{#            {% trans %} Logout {% endtrans %} #}
+{#        </a> #}
+{#    {% else %} #}
+{#        <a href="{{ path('app_register') }}" class="btn btn-basic"> #}
+{#            {% trans %} Register {% endtrans %} #}
+{#        </a> #}
+{#    {% endif %} #}
+{# {% endblock %} #}
 
 {% block body %}
-    <div id="login">
+    <section class="">
+        <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+            <a href="{{ path('public_index') }}" class="flex justify-center items-center text-2xl font-semibold text-content-primary-light dark:text-content-primary-dark">
+                <svg xmlns="http://www.w3.org/2000/svg"  class="mr-2 h-6" fill="none" viewBox="0 0 24 24" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs">
+                    <path fill="url(&quot;#SvgjsLinearGradient1076&quot;)" fill-rule="evenodd" d="M3 5a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zM3 12a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zM3 19a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm7 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" clip-rule="evenodd"></path><defs><linearGradient gradientTransform="rotate(0 0.5 0.5)" id="SvgjsLinearGradient1076"><stop stop-opacity=" 1" stop-color="rgba(105, 234, 203)" offset="0"></stop><stop stop-opacity=" 1" stop-color="rgba(234, 204, 248)" offset="0.48"></stop><stop stop-opacity=" 1" stop-color="rgba(102, 84, 241)" offset="1"></stop></linearGradient></defs></svg>
+                Medocs.be
+            </a>
 
-        <form method="post">
-            {% if error %}
-                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
-
-            {% if app.user %}
-                <div class="mb-3">
-                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            <div class="w-full bg-surface-light  rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-surface-dark dark:border-gray-700">
+                <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+                    <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                        {% trans %} title.login {% endtrans %}
+                    </h1>
+                    <form class="space-y-4 md:space-y-6" action="#">
+                        {% if error %}
+                            <div class="bg-red-800 text-red-50">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        {% endif %}
+                        <div>
+                            <label for="_username"
+                                   class="block mb-2 text-sm font-medium text-content-light dark:text-content-primary-dark/80"> {% trans %} form.email {% endtrans %}</label>
+                            <input type="email" name="_username" id="_username"
+                                   class="form-control bg-base-light/10 border border-gray-300 text-content-light rounded-lg focus:ring-base-light focus:border-base-light block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring"
+                                   placeholder="name@company.com" required autofocus>
+                        </div>
+                        <div>
+                            <label for="_password"
+                                   class="block mb-2 text-sm font-medium text-content-light dark:text-content-primary-dark/80">{% trans %}form.password {% endtrans %}</label>
+                            <input type="password" name="_password" id="_password" placeholder="••••••••"
+                                   class="form-control bg-base-light/10 border border-gray-300 text-content-light rounded-lg focus:ring-base-light focus:border-base-light block w-full p-2.5 dark:bg-base/50 dark:border-base-dark/80 dark:placeholder-content-primary-dark/40 dark:text-content-primary-dark/90 dark:focus:base-dark/80 dark:focus:border-base-dark/80 focus:ring-base-dark/20 focus:outline-none focus-visible:ring"
+                                   required autofocus>
+                        </div>
+                        <div class="flex items-center justify-between">
+                            {#                            <div class="flex items-start"> #}
+                            {#                                <div class="flex items-center h-5"> #}
+                            {#                                    <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" required=""> #}
+                            {#                                </div> #}
+                            {#                                <div class="ml-3 text-sm"> #}
+                            {#                                    <label for="remember" class="text-gray-500 dark:text-gray-300">Remember me</label> #}
+                            {#                                </div> #}
+                            {#                            </div> #}
+                            <a href="{{ path('app_forgot_password_request') }}"
+                               class="text-sm font-medium text-content-primary-light/60 hover:underline dark:text-content-primary-dark/50"> {% trans %}Forgot password {% endtrans %}
+                                ?</a>
+                        </div>
+                        <twig:button:submit class="md:w-full">{% trans %}signin {% endtrans %}</twig:button:submit>
+                        <p class="text-sm font-light text-content-primary-light/60 dark:text-content-primary-dark/50">
+                            {% trans %} form.not_registered{% endtrans %} <a href="#"
+                                                                             class="font-medium text-primary-600 hover:underline dark:text-primary-500">{% trans %}signup {% endtrans %}</a>
+                        </p>
+                        <input type="hidden" name="_csrf_token"
+                               value="{{ csrf_token('authenticate') }}"
+                        >
+                    </form>
                 </div>
-            {% endif %}
-
-            <h1>{% trans %}Login{% endtrans %}</h1>
-            <div class="form-row">
-                <label for="username">Email</label>
-                <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control"
-                       autocomplete="email" required autofocus>
-                <label for="password">Password</label>
-                <input type="password" name="_password" id="password" class="form-control"
-                       autocomplete="current-password" required>
-
-                <input type="hidden" name="_csrf_token"
-                       value="{{ csrf_token('authenticate') }}"
-                >
             </div>
-            {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
+        </div>
+    </section>
 
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" name="_remember_me"> Remember me
-                </label>
-            </div>
-            #}
 
-            <div class="form-row">
-                <a href="{{ path('app_forgot_password_request') }}">
-                    {% trans %}Forgot password {% endtrans %}?
-                </a>
-            </div>
+    <form method="post">
 
-            <div class="form-row">
-                <input type="submit" class="bg-primary" value="je me connecte">
-            </div>
-        </form>
-    </div>
+        {#
+        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+        See https://symfony.com/doc/current/security/remember_me.html
+
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" name="_remember_me"> Remember me
+            </label>
+        </div>
+        #}
+    </form>
 {% endblock %}
